--- a/DigitalLibrary/DigitalLibrary.Web/Views/Shared/_CommentPartial.cshtml
+++ b/DigitalLibrary/DigitalLibrary.Web/Views/Shared/_CommentPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using DigitalLibrary.Web.ViewModels.Comment
 @model CommentPublicViewModel
 
-<div class="container jumbotron">
-    <div >@Model.Content</div>
+<div class="comment-container jumbotron">
+    <div>@Model.Content</div>
     <div class="badge pull-right"> by: <em>@Model.PostedBy</em> Date: <em>@Model.DatePosted</em></div>
 </div>
 
