--- a/DigitalLibrary/DigitalLibrary.Web/Content/Site.css
+++ b/DigitalLibrary/DigitalLibrary.Web/Content/Site.css
@@ -51,6 +51,7 @@ textarea {
 }
 .width-fixed{
     width:190px;
+    text-align:center;
 }
 body{
     background:url("../Images/library-basement.jpg") no-repeat center center fixed;
@@ -62,7 +63,7 @@ h2, h3, h4, footer, h1, p, div{
     color:white;
 }
 .jumbotron{
-    background : rgba(30, 27, 27, 0.5)
+    background : rgba(30, 27, 27, 0.8)
 }
 .comment{
     color:black;
@@ -70,10 +71,14 @@ h2, h3, h4, footer, h1, p, div{
 .rating-container{
     border: 1px solid white;
     width:90%;
+    padding:0;
+    margin:0;
 }
 .rating-bar{
-    width:100%;
+    height:10px;
     background:red;
+    padding:0;
+    margin:0;
 }
 .bolder{
     font-weight:bolder;
@@ -85,4 +90,26 @@ h2, h3, h4, footer, h1, p, div{
 .container body-content{
     width:100%;
     margin:0;
+}
+#work-votes{
+    font-size:x-large;
+}
+#heigth-fixed{
+    width: 312px;
+   height: 287px;
+}
+.comment-container{
+    background-color:rgba(182, 161, 79, 0.7);
+}
+.test{
+    white-space: nowrap;
+    float:left;
+    text-align:justify;
+    text-overflow:ellipsis;
+}
+#desctiption-details-text {
+    height: 400px;
+    width: 300px;
+    display:block;
+    word-wrap:break-word;
 }
